--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <img src="/Images/FazeaTest.jpg" alt="test image">
+    <img src="./Images/FazeaTest.jpg" alt="test image">
     
 </body>
 </html>
