--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah Ferguson - Home</title>
-    <link rel="stylesheet" href="/Styles/resetStyles.css">
-    <link rel="stylesheet" href="/Styles/baseStyles.css">
-    <link rel="stylesheet" href="/Styles/homeStyles.css">
+    <link rel="stylesheet" href="./Styles/resetStyles.css">
+    <link rel="stylesheet" href="./Styles/baseStyles.css">
+    <link rel="stylesheet" href="./Styles/homeStyles.css">
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
     </header>
 
     <div id="aboutMe">
-        <img src="/Images/aboutIMG.jpeg" alt="artist image">
+        <img src="./Images/aboutIMG.jpeg" alt="artist image">
         <p>Sarah Ferguson is an artist and art instructor from Philippi, WV where she lives with her husband, Pete, and son, Samuel.
             <br> She has an Art Education degree from West Liberty State College, and has taught art for many years, in many different
             capacities. <br> Sarah currently teaches a weekly adult watercolor Zoom class, private in-home art lessons, workshops
