Couple more basic formatting things. Yeesh

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div id="aboutMe">
         <img src="./Images/aboutIMG.jpeg" alt="artist image">
         <p>Sarah Ferguson is an artist and art instructor from Philippi, WV where she lives with her husband, Pete, and son, Samuel.
-            <br> She has an Art Education degree from West Liberty State College, and has taught art for many years, in many different
-            capacities. <br> Sarah currently teaches a weekly adult watercolor Zoom class, private in-home art lessons, workshops
+            She has an Art Education degree from West Liberty State College, and has taught art for many years, in many different
+            capacities. Sarah currently teaches a weekly adult watercolor Zoom class, private in-home art lessons, workshops
             at the Randolph County Arts Center in Elkins, WV, and more.
         </p>
     </div>
