All pages added with a framework for content to be added
These are all of the pages that will definitely be included by project close. I am pushing them now so you guys can look at it, claim a section and start to work whenever you are ready.

--- a/gallery.html
+++ b/gallery.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sarah Ferguson - Home</title>
+    <title>Sarah Ferguson - Gallery</title>
     <link rel="stylesheet" href="./Styles/resetStyles.css">
     <link rel="stylesheet" href="./Styles/baseStyles.css">
-    <link rel="stylesheet" href="./Styles/homeStyles.css">
 </head>
 <body>
     <header>
@@ -19,16 +18,7 @@
             </ul>
         </nav>
     </header>
-
-    <div id="aboutMe">
-        <img src="./Images/aboutIMG.jpeg" alt="artist image">
-
-        <p>Sarah Ferguson is an artist and art instructor from Philippi, WV where she lives with her husband, Pete, and son, Samuel.
-            She has an Art Education degree from West Liberty State College, and has taught art for many years, in many different
-            capacities. Sarah currently teaches a weekly adult watercolor Zoom class, private in-home art lessons, workshops
-            at the Randolph County Arts Center in Elkins, WV, and more.
-        </p>
-    </div>
+    
 
     <footer>
         <p>This webpage is a work in progress. All artwork used &#xa9; Sarah Ferguson.</p>
