Added scrolling banner for homepage!
A few changes have been made to the gallery page, but those are nowhere close to final. This update focuses on making the homepage presentable and functional.

--- a/storefront.html
+++ b/storefront.html
@@ -8,20 +8,22 @@
     <link rel="stylesheet" href="./Styles/baseStyles.css">
 </head>
 <body>
-    <header>
-        <nav class="navigation">
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./gallery.html">Gallery</a></li>
-                <li><a href="./classLanding.html">Classes</a></li>
-                <li><a href="./storefront.html">Shop</a></li>
-            </ul>
-        </nav>
-    </header>
+    <section class="main">
+        <header>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="./">Home</a></li>
+                    <li><a href="./gallery.html">Gallery</a></li>
+                    <li><a href="./classLanding.html">Classes</a></li>
+                    <li><a href="./storefront.html">Shop</a></li>
+                </ul>
+            </nav>
+        </header>
 
 
 
 
+    </section>
     <footer>
         <p>This webpage is a work in progress. All artwork used &#xa9; Sarah Ferguson.</p>
     </footer>
