--- a/gallery.html
+++ b/gallery.html
@@ -6,18 +6,61 @@
     <title>Sarah Ferguson - Gallery</title>
     <link rel="stylesheet" href="./Styles/resetStyles.css">
     <link rel="stylesheet" href="./Styles/baseStyles.css">
+    <link rel="stylesheet" href="./Styles/galleryLayout.css">
 </head>
 <body>
-    <header>
-        <nav class="navigation">
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./gallery.html">Gallery</a></li>
-                <li><a href="./classLanding.html">Classes</a></li>
-                <li><a href="./storefront.html">Shop</a></li>
-            </ul>
-        </nav>
-    </header>
+    <section class="main">
+        <header>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="./">Home</a></li>
+                    <li><a href="./gallery.html">Gallery</a></li>
+                    <li><a href="./classLanding.html">Classes</a></li>
+                    <li><a href="./storefront.html">Shop</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="fullGallery">
+            <div class="displayBox">
+                <div class="galleryArt">
+                    <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
+                    <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                </div>
+            </div>
+
+            <div class="displayBox">
+                <div class="galleryArt">
+                    <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
+                    <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                </div>
+            </div>
+
+            <div class="displayBox">
+                <div class="galleryArt">
+                    <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
+                    <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                </div>
+            </div>
+
+            <div class="displayBox">
+                <div class="galleryArt">
+                    <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
+                    <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                </div>
+            </div>
+
+            <div class="displayBox">
+                <div class="galleryArt">
+                    <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
+                    <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                </div>
+            </div>
+
+        </div>
+
+
+    </section>
     
 
     <footer>
