--- a/index.html
+++ b/index.html
@@ -7,28 +7,48 @@
     <link rel="stylesheet" href="./Styles/resetStyles.css">
     <link rel="stylesheet" href="./Styles/baseStyles.css">
     <link rel="stylesheet" href="./Styles/homeStyles.css">
+    <script src="./Scripts/slideshowScripts.js"></script>
 </head>
 <body>
-    <header>
-        <nav class="navigation">
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./gallery.html">Gallery</a></li>
-                <li><a href="./classLanding.html">Classes</a></li>
-                <li><a href="./storefront.html">Shop</a></li>
-            </ul>
-        </nav>
-    </header>
+    <section class="main">
+        <header>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="./gallery.html">Gallery</a></li>
+                    <li><a href="./classLanding.html">Classes</a></li>
+                    <li><a href="./storefront.html">Shop</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <div id="aboutMe">
-        <img src="./Images/aboutIMG.jpeg" alt="artist image">
+        <div id="carousel">
+            <div class="slides">
+                <img src="Images/whitePlanetDemo.jpg" onload="showSlides();">
+                <p>Catch up on January's sessions:&nbsp; The White Continent: Art of Antarctica &nbsp;&nbsp;&nbsp; <a href="classLanding.html">Details</a></p>
+            </div>
 
-        <p>Sarah Ferguson is an artist and art instructor from Philippi, WV where she lives with her husband, Pete, and son, Samuel.
-            She has an Art Education degree from West Liberty State College, and has taught art for many years, in many different
-            capacities. Sarah currently teaches a weekly adult watercolor Zoom class, private in-home art lessons, workshops
-            at the Randolph County Arts Center in Elkins, WV, and more.
-        </p>
-    </div>
+            <div class="slides">
+                <img src="Images/vanGoghClass.jpg">
+                <p>New Feburary Class:&nbsp;The VAN GOGH Class! &nbsp; &nbsp; &nbsp; <a href="classLanding.html">Details</a></p>
+            </div>
+
+            <div class="slides">
+                <img src="Images/galleryPreview.jpg">
+                <p>See my latest and favorite works! &nbsp; &nbsp; &nbsp; <a href="gallery.html">Visit the gallery</a></p>
+            </div>
+        </div>
+
+        <div id="aboutMe">
+            <img src="./Images/aboutIMG.jpeg" alt="artist image">
+
+            <p>Sarah Ferguson is an artist and art instructor from Philippi, WV where she lives with her husband, Pete, and son, Samuel.
+                She has an Art Education degree from West Liberty State College, and has taught art for many years, in many different
+                capacities. Sarah currently teaches a weekly adult watercolor Zoom class, private in-home art lessons, workshops
+                at the Randolph County Arts Center in Elkins, WV, and more.
+            </p>
+        </div>
+    </section>  
 
     <footer>
         <p>This webpage is a work in progress. All artwork used &#xa9; Sarah Ferguson.</p>
