Slight mobile support and gallery formatting
Wooo. Progress

--- a/gallery.html
+++ b/gallery.html
@@ -22,38 +22,68 @@
         </header>
 
         <div class="fullGallery">
-            <div class="displayBox">
-                <div class="galleryArt">
-                    <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
-                    <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+            <div class="galleryColumn">
+                <div class="displayBox">
+                    <div class="galleryArt">
+                        <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
+                        <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                    </div>
+                </div>
+
+                <div class="displayBox">
+                    <div class="galleryArt">
+                        <figure><a href="Images/cowArt.jpg"><img src="Images/cowArt.jpg" /></a></figure>
+                        <figcaption>Highland Cow - Wildlife Class: June 2023</figcaption>
+                    </div>
+                </div>
+
+                <div class="displayBox">
+                    <div class="galleryArt">
+                        <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
+                        <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                    </div>
                 </div>
             </div>
 
-            <div class="displayBox">
-                <div class="galleryArt">
-                    <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
-                    <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+            <div class="galleryColumn">
+                <div class="displayBox">
+                    <div class="galleryArt">
+                        <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
+                        <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                    </div>
+                </div>
+
+                <div class="displayBox">
+                    <div class="galleryArt">
+                        <figure><a href="Images/birdArt.jpg"><img src="Images/birdArt.jpg" /></a></figure>
+                        <figcaption>BIRD</figcaption>
+                    </div>
+                </div>
+                
+            </div>
+
+            <div class="galleryColumn">
+                <div class="displayBox">
+                    <div class="galleryArt">
+                        <figure><a href="Images/whitePlanetDemo.jpg"><img src="Images/whitePlanetDemo.jpg" /></a></figure>
+                        <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                    </div>
+                </div>
+
+                <div class="displayBox">
+                    <div class="galleryArt">
+                        <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
+                        <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                    </div>
                 </div>
             </div>
 
-            <div class="displayBox">
-                <div class="galleryArt">
-                    <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
-                    <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
-                </div>
-            </div>
-
-            <div class="displayBox">
-                <div class="galleryArt">
-                    <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
-                    <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
-                </div>
-            </div>
-
-            <div class="displayBox">
-                <div class="galleryArt">
-                    <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
-                    <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+            <div class="galleryColumn">
+                <div class="displayBox">
+                    <div class="galleryArt">
+                        <figure><a href="Images/FazeaTest.jpg"><img src="Images/FazeaTest.jpg" /></a></figure>
+                        <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                    </div>
                 </div>
             </div>
 
