--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <nav class="navigation">
                 <ul>
-                    <li><a href="/">Home</a></li>
+                    <li><a>Home</a></li>
                     <li><a href="./gallery.html">Gallery</a></li>
                     <li><a href="./classLanding.html">Classes</a></li>
                     <li><a href="./storefront.html">Shop</a></li>
@@ -42,11 +42,16 @@
         <div id="aboutMe">
             <img src="./Images/aboutIMG.jpeg" alt="artist image">
 
-            <p>Sarah Ferguson is an artist and art instructor from Philippi, WV where she lives with her husband, Pete, and son, Samuel.
-                She has an Art Education degree from West Liberty State College, and has taught art for many years, in many different
-                capacities. Sarah currently teaches a weekly adult watercolor Zoom class, private in-home art lessons, workshops
-                at the Randolph County Arts Center in Elkins, WV, and more.
-            </p>
+            <div id="bio">
+                <h1>About the Artist</h1>
+                <hr>
+
+                <p>Sarah Ferguson is an artist and art instructor from Philippi, WV where she lives with her husband, Pete, and son, Samuel.
+                    She has an Art Education degree from West Liberty State College, and has taught art for many years, in many different
+                    capacities. Sarah currently teaches a weekly adult watercolor Zoom class, private in-home art lessons, workshops
+                    at the Randolph County Arts Center in Elkins, WV, and more.
+                </p>
+            </div>
         </div>
     </section>  
 
