Push "Under Construction" alerts to the live version

--- a/classLanding.html
+++ b/classLanding.html
@@ -20,6 +20,9 @@
             </nav>
         </header>
 
+        <h1 class="alert">Notice: No new classes are being offered at the moment due to personal reasons. All previous classes are available for purchase! </h1>
+
+
     </section>
 
     <footer>
