--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                 <img src="Images/galleryPreview.jpg">
                 <p>See my latest and favorite works! &nbsp; &nbsp; &nbsp; <a href="gallery.html">Visit the gallery</a></p>
             </div>
+
+            <div class="slides">
+                <img src="">
+                <p>Visit my storefront for information on purchasing prints or original artworks &nbsp; &nbsp; &nbsp; <a href="storefront.html">Visit the store</a></p>
+            </div>
         </div>
 
         <div id="aboutMe">
