Fixed naming conventions
Camel casing & lowercase filenames

--- a/gallery.html
+++ b/gallery.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah Ferguson - Gallery</title>
-    <link rel="stylesheet" href="./Styles/resetStyles.css">
-    <link rel="stylesheet" href="./Styles/baseStyles.css">
-    <link rel="stylesheet" href="./Styles/galleryLayout.css">
+    <link rel="stylesheet" href="./styles/resetStyles.css">
+    <link rel="stylesheet" href="./styles/baseStyles.css">
+    <link rel="stylesheet" href="./styles/galleryLayout.css">
 </head>
 <body>
     <section class="main">
@@ -25,21 +25,21 @@
             <div class="galleryColumn">
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
+                        <figure><a href="images/galleryBackground.jpg"><img src="images/galleryBackground.jpg" /></a></figure>
                         <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
                     </div>
                 </div>
 
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/cowArt.jpg"><img src="Images/cowArt.jpg" /></a></figure>
+                        <figure><a href="images/cowArt.jpg"><img src="images/cowArt.jpg" /></a></figure>
                         <figcaption>Highland Cow - Wildlife Class: June 2023</figcaption>
                     </div>
                 </div>
 
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
+                        <figure><a href="images/galleryBackground.jpg"><img src="images/galleryBackground.jpg" /></a></figure>
                         <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
                     </div>
                 </div>
@@ -48,14 +48,14 @@
             <div class="galleryColumn">
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
+                        <figure><a href="images/galleryBackground.jpg"><img src="images/galleryBackground.jpg" /></a></figure>
                         <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
                     </div>
                 </div>
 
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/birdArt.jpg"><img src="Images/birdArt.jpg" /></a></figure>
+                        <figure><a href="images/birdArt.jpg"><img src="images/birdArt.jpg" /></a></figure>
                         <figcaption>BIRD</figcaption>
                     </div>
                 </div>
@@ -65,14 +65,14 @@
             <div class="galleryColumn">
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/whitePlanetDemo.jpg"><img src="Images/whitePlanetDemo.jpg" /></a></figure>
+                        <figure><a href="images/whitePlanetDemo.jpg"><img src="images/whitePlanetDemo.jpg" /></a></figure>
                         <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
                     </div>
                 </div>
 
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
+                        <figure><a href="images/galleryBackground.jpg"><img src="images/galleryBackground.jpg" /></a></figure>
                         <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
             <div class="galleryColumn">
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/FazeaTest.jpg"><img src="Images/FazeaTest.jpg" /></a></figure>
+                        <figure><a href="images/FazeaTest.jpg"><img src="images/FazeaTest.jpg" /></a></figure>
                         <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
                     </div>
                 </div>
