--- a/storefront.html
+++ b/storefront.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah Ferguson - Store</title>
-    <link rel="stylesheet" href="./Styles/resetStyles.css">
-    <link rel="stylesheet" href="./Styles/baseStyles.css">
+    <link rel="stylesheet" href="./styles/resetStyles.css">
+    <link rel="stylesheet" href="./styles/baseStyles.css">
 </head>
 <body>
     <section class="main">
