--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah Ferguson - Home</title>
-    <link rel="stylesheet" href="./Styles/resetStyles.css">
-    <link rel="stylesheet" href="./Styles/baseStyles.css">
-    <link rel="stylesheet" href="./Styles/homeStyles.css">
-    <script src="./Scripts/slideshowScripts.js"></script>
+    <link rel="stylesheet" href="./styles/resetStyles.css">
+    <link rel="stylesheet" href="./styles/baseStyles.css">
+    <link rel="stylesheet" href="./styles/homeStyles.css">
+    <script src="./scripts/slideshowScripts.js"></script>
 </head>
 <body>
     <section class="main">
@@ -24,17 +24,17 @@
 
         <div id="carousel">
             <div class="slides">
-                <img src="Images/whitePlanetDemo.jpg" onload="showSlides();">
+                <img src="images/whitePlanetDemo.jpg" onload="showSlides();">
                 <p>Catch up on January's sessions:&nbsp; The White Continent: Art of Antarctica &nbsp;&nbsp;&nbsp; <a href="classLanding.html">Details</a></p>
             </div>
 
             <div class="slides">
-                <img src="Images/vanGoghClass.jpg">
+                <img src="images/vanGoghClass.jpg">
                 <p>New Feburary Class:&nbsp;The VAN GOGH Class! &nbsp; &nbsp; &nbsp; <a href="classLanding.html">Details</a></p>
             </div>
 
             <div class="slides">
-                <img src="Images/galleryPreview.jpg">
+                <img src="images/galleryPreview.jpg">
                 <p>See my latest and favorite works! &nbsp; &nbsp; &nbsp; <a href="gallery.html">Visit the gallery</a></p>
             </div>
 
@@ -45,7 +45,7 @@
         </div>
 
         <div id="aboutMe">
-            <img src="./Images/aboutIMG.jpeg" alt="artist image">
+            <img src="./images/aboutIMG.jpeg" alt="artist image">
 
             <div id="bio">
                 <h1>About the Artist</h1>
