Pushed a few Class updates

--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@
             <div class="galleryColumn">
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="images/FazeaTest.jpg"><img src="images/FazeaTest.jpg" /></a></figure>
+                        <figure><a href="Images/FazeaTest.jpg"><img src="Images/galleryPreview.jpg" /></a></figure>
                         <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
                     </div>
                 </div>
