--- a/classLanding.html
+++ b/classLanding.html
@@ -22,6 +22,12 @@
 
         <h1 class="alert">Notice: No new classes are being offered at the moment due to personal reasons. All previous classes are available for purchase! </h1>
 
+        <div>
+            <img src="Images/ClassDescriptions/vanGoghInfo.jpg" alt="Van Gogh Class Info">
+            <img src="Images/ClassDescriptions/bonusPortraitInfo.jpg" alt="Portrait Class Info">
+            <img src="Images/ClassDescriptions/antarcticaCourseInfo.jpg" alt="White Continent Class Info">
+        </div>
+
 
     </section>
 
