Unfixed naming conventions :)
I've never heard of a spacebar, but I like my shift key

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah Ferguson - Home</title>
-    <link rel="stylesheet" href="./styles/resetStyles.css">
-    <link rel="stylesheet" href="./styles/baseStyles.css">
-    <link rel="stylesheet" href="./styles/homeStyles.css">
-    <script src="./scripts/slideshowScripts.js"></script>
+    <link rel="stylesheet" href="./Styles/resetStyles.css">
+    <link rel="stylesheet" href="./Styles/baseStyles.css">
+    <link rel="stylesheet" href="./Styles/homeStyles.css">
+    <script src="./Scripts/slideshowScripts.js"></script>
 </head>
 <body>
     <section class="main">
@@ -24,17 +24,17 @@
 
         <div id="carousel">
             <div class="slides">
-                <img src="images/whitePlanetDemo.jpg" onload="showSlides();">
+                <img src="Images/whitePlanetDemo.jpg" onload="showSlides();">
                 <p>Catch up on January's sessions:&nbsp; The White Continent: Art of Antarctica &nbsp;&nbsp;&nbsp; <a href="classLanding.html">Details</a></p>
             </div>
 
             <div class="slides">
-                <img src="images/vanGoghClass.jpg">
+                <img src="Images/vanGoghClass.jpg">
                 <p>New Feburary Class:&nbsp;The VAN GOGH Class! &nbsp; &nbsp; &nbsp; <a href="classLanding.html">Details</a></p>
             </div>
 
             <div class="slides">
-                <img src="images/galleryPreview.jpg">
+                <img src="Images/galleryPreview.jpg">
                 <p>See my latest and favorite works! &nbsp; &nbsp; &nbsp; <a href="gallery.html">Visit the gallery</a></p>
             </div>
 
@@ -45,12 +45,11 @@
         </div>
 
         <div id="aboutMe">
-            <img src="./images/aboutIMG.jpeg" alt="artist image">
+            <img src="./Images/aboutIMG.jpeg" alt="artist image">
 
             <div id="bio">
                 <h1>About the Artist</h1>
                 <hr>
-
                 <p>Sarah Ferguson is an artist and art instructor from Philippi, WV where she lives with her husband, Pete, and son, Samuel.
                     She has an Art Education degree from West Liberty State College, and has taught art for many years, in many different
                     capacities. Sarah currently teaches a weekly adult watercolor Zoom class, private in-home art lessons, workshops
