Third time is a charm
Somebody needs to put you in time out, Lexi

--- a/storefront.html
+++ b/storefront.html
@@ -21,7 +21,7 @@
         </header>
 
 
-        <h1 class="alert">Notice: Storefront under construction</h1>
+        <h1 class="alert">Notice: Storefront under construction. This page will be active upon full deployment</h1>
 
     </section>
     <footer>
