--- a/storefront.html
+++ b/storefront.html
@@ -6,20 +6,24 @@
     <title>Sarah Ferguson - Store</title>
     <link rel="stylesheet" href="./Styles/resetStyles.css">
     <link rel="stylesheet" href="./Styles/baseStyles.css">
+    <link rel="stylesheet" href="./Styles/navIcon.css">
 </head>
 <body>
-    <section class="main">
-        <header>
-            <nav class="navigation">
-                <ul>
-                    <li><a href="./">Home</a></li>
-                    <li><a href="./gallery.html">Gallery</a></li>
-                    <li><a href="./classLanding.html">Classes</a></li>
-                    <li><a href="./storefront.html">Shop</a></li>
-                </ul>
-            </nav>
-        </header>
+    <header>
+        <nav class="navbar">
+            <a id="navicon" href="#"><img src="Images/tempNavIcon.png" id="navicon" alt=""></a>
+            <ul class="nav-list">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="./gallery.html">Gallery</a></li>
+                <li><a href="./classLanding.html">Classes</a></li>
+                <li><a href="./storefront.html" id="currentPage">Shop</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section class="main">
 
         <h1 class="alert">Notice: Storefront under construction</h1>
 
