--- a/gallery.html
+++ b/gallery.html
@@ -6,21 +6,25 @@
     <title>Sarah Ferguson - Gallery</title>
     <link rel="stylesheet" href="./Styles/resetStyles.css">
     <link rel="stylesheet" href="./Styles/baseStyles.css">
+    <link rel="stylesheet" href="./Styles/navIcon.css">
     <link rel="stylesheet" href="./Styles/galleryLayout.css">
 </head>
 <body>
-    <section class="main">
-        <header>
-            <nav class="navigation">
-                <ul>
-                    <li><a href="./">Home</a></li>
-                    <li><a href="./gallery.html">Gallery</a></li>
-                    <li><a href="./classLanding.html">Classes</a></li>
-                    <li><a href="./storefront.html">Shop</a></li>
-                </ul>
-            </nav>
-        </header>
+    <header>
+        <nav class="navbar">
+            <a id="navicon" href="#"><img src="Images/tempNavIcon.png" id="navicon" alt=""></a>
+            <ul class="nav-list">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="./gallery.html" id="currentPage">Gallery</a></li>
+                <li><a href="./classLanding.html">Classes</a></li>
+                <li><a href="./storefront.html">Shop</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section class="main">
         <div class="fullGallery">
             <div class="galleryColumn">
                 <div class="displayBox">
@@ -89,10 +93,8 @@
 
         </div>
 
-
     </section>
     
-
     <footer>
         <p>This webpage is a work in progress. All artwork used &#xa9; Sarah Ferguson.</p>
     </footer>
