--- a/contactPage.html
+++ b/contactPage.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sarah Ferguson - Classes</title>
+    <title>Sarah Ferguson - Contact Me</title>
+    
     <link rel="stylesheet" href="./Styles/resetStyles.css">
     <link rel="stylesheet" href="./Styles/baseStyles.css">
     <link rel="stylesheet" href="./Styles/navIcon.css">
 </head>
-
 <body>
     <header>
         <nav class="navbar">
@@ -24,21 +24,13 @@
         </nav>
     </header>
 
-    <section class="main">
-
-        <h1 class="alert">Notice: No new classes are being offered at the moment due to personal reasons. All previous classes are available for purchase! </h1>
-
-        <div>
-            <img src="Images/ClassDescriptions/vanGoghInfo.jpg" alt="Van Gogh Class Info">
-            <img src="Images/ClassDescriptions/bonusPortraitInfo.jpg" alt="Portrait Class Info">
-            <img src="Images/ClassDescriptions/antarcticaCourseInfo.jpg" alt="White Continent Class Info">
-        </div>
-
-    </section>
+    <div class="main">
+        <h1 class="alert">No contact info yet. I am an enigma</h1>
+    </div>
+    
 
     <footer>
         <p>This webpage is a work in progress. All artwork used &#xa9; Sarah Ferguson.</p>
     </footer>
-
 </body>
 </html>
