Added JS for the class page
I'm not sure if we just want to leave the info as images or add a link to sign up, but for all intents and purposes, the class page is functional

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -14,10 +14,10 @@
             <a id="navicon" href="#"><img src="Images/tempNavIcon.png" id="navicon" alt=""></a>
             <ul class="nav-list">
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./aboutMe.html">About</a></li>
+                <li><a href="./aboutMe.html" id="currentPage">About</a></li>
                 <li><a href="./gallery.html">Gallery</a></li>
                 <li><a href="./classLanding.html">Classes</a></li>
-                <li><a href="./storefront.html" id="currentPage">Shop</a></li>
+                <li><a href="./storefront.html">Shop</a></li>
                 <li><a href="./contactPage.html">Contact</a></li>
             </ul>
         </nav>
