--- a/contactPage.html
+++ b/contactPage.html
@@ -18,8 +18,8 @@
                 <li><a href="./aboutMe.html">About</a></li>
                 <li><a href="./gallery.html">Gallery</a></li>
                 <li><a href="./classLanding.html">Classes</a></li>
-                <li><a href="./storefront.html" id="currentPage">Shop</a></li>
-                <li><a href="./contactPage.html">Contact</a></li>
+                <li><a href="./storefront.html">Shop</a></li>
+                <li><a href="./contactPage.html" id="currentPage">Contact</a></li>
             </ul>
         </nav>
     </header>
