--- a/gallery.html
+++ b/gallery.html
@@ -17,9 +17,9 @@
             <ul class="nav-list">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./aboutMe.html">About</a></li>
-                <li><a href="./gallery.html">Gallery</a></li>
+                <li><a href="./gallery.html" id="currentPage">Gallery</a></li>
                 <li><a href="./classLanding.html">Classes</a></li>
-                <li><a href="./storefront.html" id="currentPage">Shop</a></li>
+                <li><a href="./storefront.html">Shop</a></li>
                 <li><a href="./contactPage.html">Contact</a></li>
             </ul>
         </nav>
