--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <nav class="navbar">
             <a id="navicon" href="#"><img src="Images/tempNavIcon.png" id="navicon" alt=""></a>
             <ul class="nav-list">
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="./index.html" id="currentPage">Home</a></li>
                 <li><a href="./aboutMe.html">About</a></li>
                 <li><a href="./gallery.html">Gallery</a></li>
                 <li><a href="./classLanding.html">Classes</a></li>
-                <li><a href="./storefront.html" id="currentPage">Shop</a></li>
+                <li><a href="./storefront.html">Shop</a></li>
                 <li><a href="./contactPage.html">Contact</a></li>
             </ul>
         </nav>
@@ -29,7 +29,7 @@
     <section class="main">
         <div id="carousel">
             <div class="slides">
-                <img src="Images/ClassDescriptions/antarcticaCourseInfo.jpg" onload="showSlides();">
+                <img src="Images/whitePlanetDemo.jpg" onload="showSlides();">
                 <p>Catch up on January's sessions:&nbsp; The White Continent: Art of Antarctica &nbsp;&nbsp;&nbsp; <a href="classLanding.html">Details</a></p>
             </div>
 
