Gallery Images and description updates!
This is about a quarter of the gallery I have planned. The rest will be pushed later today

--- a/gallery.html
+++ b/gallery.html
@@ -53,15 +53,15 @@
             <div class="galleryColumn">
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
-                        <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                        <figure><a href="Images/portraitBW.jpg"><img src="Images/portraitBW.jpg" /></a></figure>
+                        <figcaption>Untitled Portrait: <br> February 2025</figcaption>
                     </div>
                 </div>
 
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/birdArt.jpg"><img src="Images/birdArt.jpg" /></a></figure>
-                        <figcaption>BIRD</figcaption>
+                        <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
+                        <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
                     </div>
                 </div>
                 
@@ -71,14 +71,14 @@
                 <div class="displayBox">
                     <div class="galleryArt">
                         <figure><a href="Images/whitePlanetDemo.jpg"><img src="Images/whitePlanetDemo.jpg" /></a></figure>
-                        <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                        <figcaption>The Zodiac - White Planet Class: <br> January 2025</figcaption>
                     </div>
                 </div>
 
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
-                        <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                        <figure><a href="Images/birdArt.jpg"><img src="Images/birdArt.jpg" /></a></figure>
+                        <figcaption>BIRD</figcaption>
                     </div>
                 </div>
             </div>
@@ -86,8 +86,8 @@
             <div class="galleryColumn">
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/galleryPreview.jpg"><img src="Images/galleryPreview.jpg" /></a></figure>
-                        <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                        <figure><a href="Images/woodenHippo.jpg"><img src="Images/woodenHippo.jpg" /></a></figure>
+                        <figcaption>Wooden Hippo (In the style of Emily Carr) - Group of Seven Watercolor Class:<br> August 2021</figcaption>
                     </div>
                 </div>
             </div>
