--- a/gallery.html
+++ b/gallery.html
@@ -30,22 +30,22 @@
             <div class="galleryColumn">
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
-                        <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                        <figure><a href="Images/heronDot.jpg"><img src="Images/heronDot.jpg" /></a></figure>
+                        <figcaption>Egret - Bernie Peace Tribute <br> April 2019</figcaption>
                     </div>
                 </div>
 
                 <div class="displayBox">
                     <div class="galleryArt">
                         <figure><a href="Images/cowArt.jpg"><img src="Images/cowArt.jpg" /></a></figure>
-                        <figcaption>Highland Cow - Wildlife Class: June 2023</figcaption>
+                        <figcaption>Highland Cow - Wildlife Class <br> June 2023</figcaption>
                     </div>
                 </div>
 
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
-                        <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                        <figure><a href="Images/fallReflection.png"><img src="Images/fallReflection.png" /></a></figure>
+                        <figcaption>Maple Tree Reflected in Pond - All Things Fall Class <br> October 2020</figcaption>
                     </div>
                 </div>
             </div>
@@ -54,31 +54,44 @@
                 <div class="displayBox">
                     <div class="galleryArt">
                         <figure><a href="Images/portraitBW.jpg"><img src="Images/portraitBW.jpg" /></a></figure>
-                        <figcaption>Untitled Portrait: <br> February 2025</figcaption>
+                        <figcaption>Untitled Portrait <br> February 2025</figcaption>
                     </div>
                 </div>
 
                 <div class="displayBox">
                     <div class="galleryArt">
-                        <figure><a href="Images/galleryBackground.jpg"><img src="Images/galleryBackground.jpg" /></a></figure>
-                        <figcaption>This is obviously a test image. Happy Lexi?</figcaption>
+                        <figure><a href="Images/waterLilly.jpg"><img src="Images/waterLilly.jpg" /></a></figure>
+                        <figcaption>Lily <br> March 2024</figcaption>
                     </div>
                 </div>
                 
+                <div class="displayBox">
+                    <div class="galleryArt">
+                        <figure><a href="Images/prismaticStudy.jpg"><img src="Images/prismaticStudy.jpg" /></a></figure>
+                        <figcaption>Grand Prismatic (Watercolor Study) <br> July 2024</figcaption>
+                    </div>
+                </div>
             </div>
 
             <div class="galleryColumn">
                 <div class="displayBox">
                     <div class="galleryArt">
                         <figure><a href="Images/whitePlanetDemo.jpg"><img src="Images/whitePlanetDemo.jpg" /></a></figure>
-                        <figcaption>The Zodiac - White Planet Class: <br> January 2025</figcaption>
+                        <figcaption>The Zodiac - White Planet Class <br> January 2025</figcaption>
                     </div>
                 </div>
 
                 <div class="displayBox">
                     <div class="galleryArt">
                         <figure><a href="Images/birdArt.jpg"><img src="Images/birdArt.jpg" /></a></figure>
-                        <figcaption>BIRD</figcaption>
+                        <figcaption>Bird on Pumpkins <br> 2020</figcaption>
+                    </div>
+                </div>
+
+                <div class="displayBox">
+                    <div class="galleryArt">
+                        <figure><a href="Images/oldFaithful.jpg"><img src="Images/oldFaithful.jpg" /></a></figure>
+                        <figcaption>Eruption - A Virtual Journey to: Yellowstone Class <br> July 2024</figcaption>
                     </div>
                 </div>
             </div>
@@ -87,7 +100,21 @@
                 <div class="displayBox">
                     <div class="galleryArt">
                         <figure><a href="Images/woodenHippo.jpg"><img src="Images/woodenHippo.jpg" /></a></figure>
-                        <figcaption>Wooden Hippo (In the style of Emily Carr) - Group of Seven Watercolor Class:<br> August 2021</figcaption>
+                        <figcaption>Wooden Hippo (In the style of Emily Carr) - Group of Seven Watercolor Class<br> August 2021</figcaption>
+                    </div>
+                </div>
+
+                <div class="displayBox">
+                    <div class="galleryArt">
+                        <figure><a href="Images/sailor.jpg"><img src="Images/sailor.jpg" /></a></figure>
+                        <figcaption>Monochromatic Sailor <br> April 2025</figcaption>
+                    </div>
+                </div>
+
+                <div class="displayBox">
+                    <div class="galleryArt">
+                        <figure><a href="Images/yosemiteFalls.jpg"><img src="Images/yosemiteFalls.jpg" /></a></figure>
+                        <figcaption>Yosemite Falls - Watercolor<br> September 2024</figcaption>
                     </div>
                 </div>
             </div>
